--- a/src/styles/scss/_media-queries.scss
+++ b/src/styles/scss/_media-queries.scss
@@ -219,11 +219,11 @@
     margin: 1rem 0 0 0;
   }
 
-  .contact-form {
+  .contact__inner-form {
     grid-column: 1 / 4;
   }
 
-  .contact-info {
+  .contact__inner-info {
     grid-column: 1 / 4;
   }
 
