--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -4,25 +4,27 @@
 
 1. Grid Mixins
 2. Flex Mixins
+3. Color Mixin
 
 */
+/*--------------------------------1. Grid Mixins----*/
 /*-- Grid Template (1 Column) --*/
 /*-- Grid Template (4 Columns) --*/
 /*--  --*/
+/*--------------------------------2. Flex Mixins----*/
 /*--  --*/
+/*--------------------------------3. Color Mixin----*/
 /*----------------------------------------------------
 ------------------------------- Table of Contents ----
 ------------------------------------------------------
 
 1. Page Templates
     1.1. 12 Column Template
-
 2. Navigation
     2.1. Navbar Top
     2.2. Navbar Bottom
     2.3. Navbar Container
     2.4. Navbar Menu
-
 3. Home Page Sections
     3.1. Hero Section
         3.1.1. Hero
@@ -678,25 +680,38 @@
   margin: 0 auto;
 }
 
-.contact-header {
+.contact__inner-header {
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-column: 1 / 4;
   margin-bottom: 2rem;
 }
 
-.contact-form {
+.contact__inner-form {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1 / 3;
   padding: 2rem;
 }
 
-.contact-info {
+.contact__inner-info {
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-column: 3 / 4;
   padding: 2rem;
+}
+
+.contact__inner-info img {
+  margin: 1rem;
+}
+
+.contact__inner-info ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .contact-map {
@@ -1126,7 +1141,6 @@ input, select, textarea {
   height: 2rem;
   border: none;
   border-bottom: 1px solid #353535;
-  margin-bottom: 2rem;
   padding-left: 1rem;
   background: #89aae6;
 }
@@ -1142,10 +1156,27 @@ input[type="checkbox"], select[type="checkbox"], textarea[type="checkbox"], inpu
 textarea {
   height: 150px;
   padding: 0.5rem 1rem;
+  margin: 2rem 0;
 }
 
 button[type="submit"], .btn-large[type="submit"] {
   width: 100%;
+}
+
+.form-error {
+  border-bottom: 1px solid red;
+}
+
+.form-error-msg {
+  color: red;
+}
+
+.quote-form label {
+  margin-top: 2rem;
+}
+
+.contact-form input, .contact-form select, .contact-form textarea {
+  margin: 0 0 2rem 0;
 }
 
 /*---------------------- 8. Checklist ----*/
@@ -1266,6 +1297,16 @@ button[type="submit"], .btn-large[type="submit"] {
   color: #d7075d;
 }
 
+/*----------------------------------------------------
+------------------------------- Table of Contents ----
+------------------------------------------------------
+
+1. Hero Background Image Scaling
+2. Hero Header Fade In
+3. Button Click Press
+
+*/
+/*--------------1. Hero Background Image Scaling----*/
 @-webkit-keyframes bg-scale {
   0% {
     -webkit-transform: scale(1, 1);
@@ -1280,7 +1321,6 @@ button[type="submit"], .btn-large[type="submit"] {
             transform: scale(1, 1);
   }
 }
-
 @keyframes bg-scale {
   0% {
     -webkit-transform: scale(1, 1);
@@ -1296,28 +1336,7 @@ button[type="submit"], .btn-large[type="submit"] {
   }
 }
 
-@-webkit-keyframes btn-translate {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(50px);
-            transform: translateY(50px);
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes btn-translate {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(50px);
-            transform: translateY(50px);
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
+/*------------------------2. Hero Header Fade In----*/
 @-webkit-keyframes header-translate {
   0% {
     opacity: 0;
@@ -1328,12 +1347,33 @@ button[type="submit"], .btn-large[type="submit"] {
     opacity: 1;
   }
 }
-
 @keyframes header-translate {
   0% {
     opacity: 0;
     -webkit-transform: translateX(-100px);
             transform: translateX(-100px);
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+/*-------------------------3. Button Click Press----*/
+@-webkit-keyframes btn-translate {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes btn-translate {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
   }
   100% {
     opacity: 1;
@@ -1517,7 +1557,7 @@ button[type="submit"], .btn-large[type="submit"] {
         -ms-flex-align: center;
             align-items: center;
     position: fixed;
-    background: rgba(22, 50, 79, 0.877);
+    background: rgba(25, 25, 35, 0.877);
     height: 100vh;
     width: 100vw;
     top: -100vh;
@@ -1590,12 +1630,12 @@ button[type="submit"], .btn-large[type="submit"] {
     grid-column: 1 / 3;
     margin: 1rem 0 0 0;
   }
-  .contact-form {
+  .contact__inner-form {
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-column: 1 / 4;
   }
-  .contact-info {
+  .contact__inner-info {
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-column: 1 / 4;
@@ -1691,10 +1731,23 @@ button[type="submit"], .btn-large[type="submit"] {
 4. Navigation
     4.1. Navbar Top
     4.2. Navbar Bottom
-    4.3. Navbar Phone
 5. Home Page
     5.1. Hero Section
-    5.2. About Section
+    5.2. Info Section
+    5.3. Size Guide Section
+6. Storage Page
+    6.1. Why Us Section
+    6.2. Flexible Section
+    6.3. Quote Section
+7. Quote Page
+    7.1. Quote Form Section
+8. About Page
+9. Checklist Page
+10. Contact Page
+    10.1. Contact Form Section
+    10.2. Contact Info Section
+11. Error 404 Page
+12. Footer
 
 */
 /*-------------------------------- 1. Universal ----*/
@@ -1751,16 +1804,15 @@ small {
   color: #191923;
 }
 
+.navbar__top span, .navbar__bottom span {
+  color: #ffffff;
+  font-weight: bold;
+}
+
 /*-- 4.2. Navbar Bottom --*/
 .navbar__bottom {
   background: #191923;
   color: #ffffff;
-}
-
-/*-- 4.3. Navbar Phone --*/
-.navbar-inner__phone {
-  color: #ffffff;
-  font-weight: bold;
 }
 
 /*-------------------------------- 5. Home Page ----*/
@@ -1786,64 +1838,75 @@ small {
 /*-- 5.2. Info Section --*/
 .info {
   background: #89aae6;
+  color: #353535;
 }
 
-/*-- 5.2. Size Guide Section --*/
+/*-- 5.3. Size Guide Section --*/
 .size-guide__inner {
   border: 2px solid #345995;
 }
 
 .size-guide__tabs {
   background: #345995;
+  color: #ffffff;
 }
 
-/*----------------------- 6. House Storage Page ----*/
+/*----------------------------- 6. Storage Page ----*/
+/*-- 6.1. Why Us Section --*/
 .why-us {
   background: #345995;
   color: #ffffff;
 }
 
+/*-- 6.2. Flexible Section --*/
 .flexible {
   background: #345995;
   color: #ffffff;
 }
 
+/*-- 6.3. Quote Section --*/
 .quote {
   background: #89aae6;
+  color: #353535;
 }
 
-/*-------------------------------- 5. Quote Page ----*/
+/*------------------------------- 7. Quote Page ----*/
 .quote-form {
   background: #89aae6;
+  color: #353535;
 }
 
-/*-------------------------------- 5. About Page ----*/
+/*------------------------------- 8. About Page ----*/
 .about__bottom {
   background: #89aae6;
+  color: #353535;
 }
 
-/*-------------------------------- 5. Checklist Page ----*/
+/*--------------------------- 9. Checklist Page ----*/
 .checklist label {
   font-weight: bold;
 }
 
-/*-------------------------------- 5. Contact Page ----*/
-.contact-form {
+/*---------------------------- 10. Contact Page ----*/
+/*-- 10.1. Contact Form Section --*/
+.contact__inner-form {
   background: #89aae6;
+  color: #353535;
 }
 
-.contact-info {
+/*-- 10.2. Contact Info Section --*/
+.contact__inner-info {
   background: #191923;
   color: #ffffff;
 }
 
-/*-------------------------------- 5. Error 404 Page ----*/
+/*-------------------------- 11. Error 404 Page ----*/
 .error-404 {
   background: #191923;
   color: #ffffff;
 }
 
-/*-------------------------------- 5. Footer ----*/
+/*---------------------------------- 12. Footer ----*/
 footer {
   background: #191923;
   color: #ffffff;
