--- a/src/styles/scss/_mixins.scss
+++ b/src/styles/scss/_mixins.scss
@@ -4,9 +4,11 @@
 
 1. Grid Mixins
 2. Flex Mixins
+3. Color Mixin
 
 */
 
+/*--------------------------------1. Grid Mixins----*/
 /*-- Grid Template (1 Column) --*/
 @mixin grid-template-1 {
   display: grid;
@@ -27,6 +29,8 @@
   padding: 4rem 2rem;
 }
 
+
+/*--------------------------------2. Flex Mixins----*/
 /*--  --*/
 @mixin flex-between-center {
   display: flex;
@@ -44,4 +48,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+
+/*--------------------------------3. Color Mixin----*/
+@mixin section-theme($background, $color) {
+  background: $background;
+  color: $color;
 }
