Changes to layout.css

--- a/src/styles/scss/_animations.scss
+++ b/src/styles/scss/_animations.scss
@@ -4,7 +4,7 @@
 
 1. Hero Background Image Scaling
 2. Hero Header Fade In
-3. Button Click Press
+3. Button Click
 
 */
 
@@ -33,7 +33,7 @@
     }
 }
 
-/*-------------------------3. Button Click Press----*/
+/*-------------------------------3. Button Click----*/
 @keyframes btn-translate {
     0% {
         opacity: 0;
