--- a/src/styles/scss/_layout.scss
+++ b/src/styles/scss/_layout.scss
@@ -4,7 +4,7 @@
 
 1. Page Templates
     1.1. 1 Column Template
-2. Navigation
+2. Navigation Section
     2.1. Navbar
     2.2. Navbar Top
     2.3. Navbar Bottom
@@ -13,19 +13,93 @@
 3. Home Page Sections
     3.1. Hero Section
         3.1.1. Hero
-        3.1.2. Hero Container
-        3.1.3. Hero Container Inner
+        3.1.2. Hero Inner
     3.2. Services Section
         3.2.1. Services
-        3.2.2. Services Container
+        3.2.2. Services Inner
     3.3. How It Works Section
         3.3.1. How It Works
-        3.3.2. How It Works Container
-    3.4. About Section
-        3.4.1. About
-        3.4.2. About Container
-        3.4.3. About Image
-        3.4.4. About Info
+        3.3.2. How It Works Inner
+    3.4. Info Section
+        3.4.1. Info
+        3.4.2. Info Inner
+        3.4.3. Info Image
+        3.4.4. Info Text
+    3.5. Size Guide Section
+        3.5.1. Size Guide
+        3.5.2. Size Guide Inner
+        3.5.3. Size Guide Panes
+        3.5.4. Size Guide Tabs
+4. Storage Page Sections
+    4.1. Storage Section
+        4.1.1. Storage
+        4.1.2. Storage Inner
+        4.1.3. Storage Inner Info
+        4.1.4. Storage Inner Image
+    4.2. Why Us? Section
+        4.2.1. Why Us?
+        4.2.2. Why Us? Inner
+        4.2.3. Why Us? Inner Lists
+    4.3. Access Section
+        4.3.1. Access
+    4.4. Flexible Section
+        4.4.1. Flexible
+        4.4.2. Flexible Inner
+        4.4.3. Flexible Inner Image
+        4.4.4. Flexible Inner Info
+    4.5. Security Section
+        4.5.1. Security
+    4.6. Quote Section
+        4.6.1. Quote
+5. FAQ Page Sections
+    5.1. FAQ
+    5.2. FAQ Inner
+6. Quote Page Sections
+    6.1. Quote Container
+    6.2. Quote Info
+    6.3. Quote Form
+    6.4. Quote Form Inner
+    6.5. Left
+    6.6. Right
+7. Packing Supplies Page Sections
+    7.1. Packing
+    7.2. Packing Inner
+8. About Page Sections
+    8.1. About
+    8.2. About Inner
+    8.3. About Top
+    8.4. About Info
+    8.5. About Image
+    8.6. About Middle
+    8.7. About Bottom
+    8.8. About List
+9. Checklist Page Sections
+    9.1. Checklist
+    9.2. Checklist Inner
+    9.3. Checklist Grid
+    9.4. Checklist Grid Left
+    9.5. Checklist Grid Right
+    9.6. Checklist Item Header
+10. Contact Page Sections
+    10.1. Contact
+    10.2. Contact Inner 
+    10.3. Contact Inner Header
+    10.4. Contact Inner Form
+    10.5. Contact Inner Info
+    10.6. Contact Map
+11. Site Map Page Sections
+    11.1. Site Map
+    11.2. Site Map Inner
+12. Error 404 Page Sections
+    12.1. Error 404
+    12.2. Error 404 Inner
+13. Footer Section
+    13.1. Footer
+    13.2. Footer Top
+    13.3. Footer Top Left
+    13.4. Footer Middle
+    13.5. Footer Middle Links
+    13.6. Footer Bottom
 
 
 */
@@ -37,7 +111,7 @@
     @include grid-template-1;
 }
 
-/*------------------------------- 2. Navigation ----*/
+/*----------------------- 2. Navigation Section ----*/
 
 /*-- 2.1. Navbar --*/
 .navbar {
@@ -80,7 +154,7 @@
     padding: 0;
 }
 
-/*-- 3.1.2. Hero Container --*/
+/*-- 3.1.2. Hero Inner --*/
 .hero__inner {
     @include flex-col-start;
     max-width: $max-width;
@@ -95,7 +169,7 @@
     @include grid-col-1;
 }
 
-/*-- 3.2.2. Services Container --*/
+/*-- 3.2.2. Services Inner --*/
 .services__inner {
     @include grid-template-4;
 }
@@ -107,7 +181,7 @@
     @include grid-col-1;
 }
 
-/*-- 3.3.2. How It Works Container --*/
+/*-- 3.3.2. How It Works Inner --*/
 .how-works__inner {
     @include grid-template-4;
     margin: 4rem 10% 0 10%;
@@ -120,7 +194,7 @@
     @include grid-col-1;
 }
 
-/*-- 3.4.2. Info Container --*/
+/*-- 3.4.2. Info Inner --*/
 .info__inner {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -156,10 +230,13 @@
 }
 
 /*------------------ 3.5. Size Guide Section --*/
+
+/*-- 3.5.1. Size Guide --*/
 .size-guide {
     @include grid-col-1;
 }
 
+/*-- 3.5.2. Size Guide Inner --*/
 .size-guide__inner {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -168,24 +245,30 @@
     margin: 0 auto;
 }
 
+/*-- 3.5.3. Size Guide Panes --*/
 .size-guide__panes {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
 }
 
+/*-- 3.5.4. Size Guide Tabs --*/
 .size-guide__tabs {
     grid-column: 3 / 4;
     grid-row: 1 / 2;
 }
 
-/*-------------- 4. House Storage Page Sections ----*/
 
-/*----------------- 4.1. Header Section --*/
+/*-------------------- 4. Storage Page Sections ----*/
+
+/*----------------- 4.1. Storage Section --*/
+
+/*-- 4.1.1. Storage --*/
 .storage {
     @include grid-col-1;
     justify-self: center;
 }
 
+/*-- 4.1.2. Storage Inner --*/
 .storage__inner {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -193,6 +276,7 @@
     max-width: $max-width;
 }
 
+/*-- 4.1.3. Storage Inner Info --*/
 .storage__inner__info {
     grid-column: 1 / 2;
     margin-right: 2rem;
@@ -206,6 +290,7 @@
     }
 }
 
+/*-- 4.1.4. Storage Inner Image --*/
 .storage__inner__img {
     grid-column: 2 / 3;
     justify-self: end;
@@ -218,10 +303,13 @@
 }
 
 /*---------------- 4.2. Why Us? Section --*/
+
+/*-- 4.2.1. Why Us? --*/
 .why-us {
     @include grid-col-1;
 }
 
+/*-- 4.2.2. Why Us? Inner --*/
 .why-us__inner {
     max-width: $max-width;
     margin: 0 auto;
@@ -231,6 +319,7 @@
     }
 }
 
+/*-- 4.2.3. Why Us? Inner Lists --*/
 .why-us__inner__lists {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -248,6 +337,8 @@
 }
 
 /*---------------- 4.3. Access Section --*/
+
+/*-- 4.3.1. Access --*/
 .access {
     @include grid-col-1;
     max-width: $max-width;
@@ -260,10 +351,13 @@
 }
 
 /*---------------- 4.4. Flexible Section --*/
+
+/*-- 4.4.1. Flexible --*/
 .flexible {
     @include grid-col-1;
 }
 
+/*-- 4.4.2. Flexible Inner --*/
 .flexible__inner {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -272,6 +366,7 @@
     margin: 0 auto;
 }
 
+/*-- 4.4.3. Flexible Inner Image --*/
 .flexible__inner__img {
     grid-column: 1 / 2;
 
@@ -281,6 +376,7 @@
     }
 }
 
+/*-- 4.4.4. Flexible Inner Info --*/
 .flexible__inner__info {
     grid-column: 2 / 3;
     margin-left: 2rem;
@@ -295,6 +391,8 @@
 }
 
 /*---------------- 4.5. Security Section --*/
+
+/*-- 4.5.1. Security --*/
 .security {
     @include grid-col-1;
     max-width: $max-width;
@@ -306,6 +404,8 @@
 }
 
 /*---------------- 4.6. Quote Section --*/
+
+/*-- 4.6.1. Quote --*/
 .quote {
     @include grid-col-1;
     text-align: center;
@@ -315,12 +415,14 @@
     }
 }
 
-/*------------------------ 4. FAQ Page Sections ----*/
+/*------------------------ 5. FAQ Page Sections ----*/
 
+/*-- 5.1. FAQ --*/
 .faq {
     @include grid-col-1;
 }
 
+/*-- 5.2. FAQ Inner --*/
 .faq__inner {
     max-width: $max-width;
     margin: 0 auto;
@@ -330,12 +432,15 @@
     }
 }
 
-/*------------------------ 4. Quote Page Sections ----*/
+/*------------------------ 6. Quote Page Sections ----*/
+
+/*-- 6.1. Quote Container --*/
 .quote-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
+/*-- 6.2. Quote Info --*/
 .quote-info {
     grid-column: 1 / 2;
     padding: 4rem 2rem;
@@ -346,15 +451,18 @@
     }
 }
 
+/*-- 6.3. Quote Form --*/
 .quote-form {
     grid-column: 2 / 3;
     padding: 4rem 2rem;
 }
 
+/*-- 6.4. Quote Form Inner --*/
 .quote-form__inner {
     display: flex;
 }
 
+/*-- 6.5. Left --*/
 .left {
     display: flex;
     flex-direction: column;
@@ -362,33 +470,38 @@
     padding-right: 2rem;
 }
 
+/*-- 6.6. Right --*/
 .right {
     @extend .left;
     padding-right: 0;
 }
 
-/*----------- 4. Packing Supplies Page Sections ----*/
+/*----------- 7. Packing Supplies Page Sections ----*/
 
-/*-- 3.2.1. Packing --*/
+/*-- 7.1. Packing --*/
 .packing {
     @include grid-col-1;
 }
 
-/*-- 3.2.2.  Container --*/
+/*-- 7.2. Packing Inner --*/
 .packing__inner {
     @include grid-template-4;
 }
 
-/*---------------------- 4. About Page Sections ----*/
+/*---------------------- 8. About Page Sections ----*/
+
+/*-- 8.1. About --*/
 .about {
     @include grid-col-1;
 }
 
+/*-- 8.2. About Inner --*/
 .about__inner {
     max-width: $max-width;
     margin: 0 auto;
 }
 
+/*-- 8.3. About Top --*/
 .about__top {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -396,6 +509,7 @@
     margin-bottom: 4rem;
 }
 
+/*-- 8.4. About Info --*/
 .about__info {
     grid-column: 1 / 2;
     margin-right: 2rem;
@@ -405,6 +519,7 @@
     }
 }
 
+/*-- 8.5. About Image --*/
 .about__img {
     grid-column: 2 / 3;
     width: 100%;
@@ -416,6 +531,7 @@
     }
 }
 
+/*-- 8.6. About Middle --*/
 .about__middle {
     margin-top: 4rem;
 
@@ -433,6 +549,7 @@
     }
 }
 
+/*-- 8.7. About Bottom --*/
 .about__bottom {
     padding: 4rem 2rem;
     text-align: center;
@@ -442,31 +559,38 @@
     }
 }
 
+/*-- 8.8. About List --*/
 .about__list {
     grid-column: 1 / 2;
     justify-self: center;
 }
 
-/*---------------------- 4. Checklist Page Sections ----*/
+/*------------------ 9. Checklist Page Sections ----*/
+
+/*-- 9.1. Checklist --*/
 .checklist {
     @include grid-col-1;
 }
 
+/*-- 9.2. Checklist Inner --*/
 .checklist__inner {
     max-width: $max-width;
     margin: 0 auto;
 }
 
+/*-- 9.3. Checklist Grid --*/
 .checklist__grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     margin-top: 2rem;
 }
 
+/*-- 9.4. Checklist Grid Left --*/
 .checklist__grid__left {
     grid-column: 1 / 2;
 }
 
+/*-- 9.5. Checklist Grid Right --*/
 .checklist__grid__right {
     grid-column: 2 / 4;
 
@@ -485,27 +609,22 @@
     }
 }
 
+/*-- 9.6. Checklist Item Header --*/
 .checklist__item__header {
     display: flex;
     align-items: center;
     margin-bottom: 1rem;
 }
 
-/*---------------------- 4. Checklist Page Sections ----*/
-.sitemap {
-    @include grid-col-1;
-}
 
-.sitemap__inner {
-    max-width: $max-width;
-    margin: 0 auto;
-}
+/*------------------- 10. Contact Page Sections ----*/
 
-/*---------------------- 4. Contact Page Sections ----*/
+/*-- 10.1. Contact --*/
 .contact {
     @include grid-col-1;
 }
 
+/*-- 10.2. Contact Inner --*/
 .contact__inner {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -513,16 +632,19 @@
     margin: 0 auto;
 }
 
+/*-- 10.3. Contact Inner Header --*/
 .contact__inner-header {
     grid-column: 1 / 4;
     margin-bottom: 2rem;
 }
 
+/*-- 10.4. Contact Inner Form --*/
 .contact__inner-form {
     grid-column: 1 / 3;
     padding: 2rem;
 }
 
+/*-- 10.5. Contact Inner Info --*/
 .contact__inner-info {
     grid-column: 3 / 4;
     padding: 2rem;
@@ -537,12 +659,30 @@
     }
 }
 
+/*-- 10.6. Contact Map --*/
 .contact-map {
     width: 100%;
     height: 500px;
 }
 
-/*---------------------- 4. Error 404 Page Sections ----*/
+
+/*------------------ 11. Site Map Page Sections ----*/
+
+/*-- 11.1. Site Map --*/
+.sitemap {
+    @include grid-col-1;
+}
+
+/*-- 11.2. Site Map Inner --*/
+.sitemap__inner {
+    max-width: $max-width;
+    margin: 0 auto;
+}
+
+
+/*----------------- 12. Error 404 Page Sections ----*/
+
+/*-- 12.1. Error 404 --*/
 .error-404 {
     @include grid-col-1;
     height: 100vh;
@@ -551,6 +691,7 @@
     text-align: center;
 }
 
+/*-- 12.2. Error 404 Inner --*/
 .error-404__inner {
     max-width: $max-width;
     margin: 0 auto;
@@ -560,19 +701,21 @@
     }
 }
 
-/*----------------------------------- ?. Footer ----*/
+/*-------------------------- 13. Footer Section ----*/
+
+/*-- 13.1. Footer --*/
 .footer {
     @include grid-col-1;
 }
 
-/*--------------------- ?.?. Footer Top --*/
+/*-- 13.2. Footer Top --*/
 .footer__top {
     @include flex-between-center;
     max-width: $max-width;
     margin: 0 auto;
 }
 
-/*-- ?.?.?. Footer Top Left --*/
+/*-- 13.3. Footer Top Left --*/
 .footer__top__left {
     display: flex;
     align-items: center;
@@ -586,13 +729,13 @@
     }
 }
 
-/*------------------ ?.?. Footer Middle --*/
+/*-- 13.4. Footer Middle --*/
 .footer__middle {
     @extend .footer__top;
     padding: 4rem 0;
 }
 
-/*-- ?.?.?. Footer Middle Links --*/
+/*-- 13.5. Footer Middle Links --*/
 .footer__middle__links {
     margin-left: 2rem;
 
@@ -613,7 +756,7 @@
     }
 }
 
-/*------------------ ?.?. Footer Bottom --*/
+/*-- 13.6. Footer Bottom --*/
 .footer__bottom {
     @extend .footer__top;
 }
