--- a/src/styles/scss/_media-queries.scss
+++ b/src/styles/scss/_media-queries.scss
@@ -52,6 +52,14 @@
     font-size: 12vw;
   }
 
+  .cookie-policy h1 {
+    font-size: 3rem;
+  }
+
+  .cookie-policy h2 {
+    font-size: 2rem;
+  }
+
   h2 {
     font-size: 2rem;
   }
@@ -142,8 +150,8 @@
   }
 
   /*-- 1.2.6. Checklist --*/
-  .checklist {
-    padding: 4rem 0;
+  .checklist-header {
+    font-size: 3rem;
   }
 
   .checklist__grid {
@@ -291,6 +299,8 @@
 
   .contact__inner-info {
     grid-column: 1 / 4;
+    padding: 1rem;
+    font-size: 0.9rem;
   }
 
   /*-- 1.3.8. Footer --*/
