--- a/styles/scss/_media-queries.scss
+++ b/styles/scss/_media-queries.scss
@@ -41,352 +41,358 @@
 
 */
 
-
 /*--------------------1. Less Than Media Queries----*/
 
 // 1.1. Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575px) {
-
-  /*-- 1.1.1. Headings --*/
-  .hero h1 {
-    font-size: 12vw;
-  }
-
-  .cookie-policy h1 {
-    font-size: 3rem;
-  }
-
-  .cookie-policy h2 {
-    font-size: 2rem;
-  }
-
-  h2 {
-    font-size: 2rem;
-  }
-
-  /*-- 1.1.2. Size Guide Section --*/
-  .size-guide {
-    padding: 4rem 0.5rem;
-  }
-
-  /*-- 1.1.3. Quote Form Section --*/
-  .quote-form__inner {
-    display: block;
-  }
-
-  .left {
-    padding-right: 0;
-  }
-
-  /*-- 1.1.4. Footer --*/
-  .footer__top__left {
-    display: flex;
-    flex-direction: column;
-
-    & .footer__top-icon {
-      margin-bottom: 0.5rem;
+    /*-- 1.1.1. Headings --*/
+    .hero h1 {
+        font-size: 12vw;
     }
 
-    & span {
-      margin-left: 0rem;
+    .cookie-policy h1 {
+        font-size: 3rem;
     }
 
-    & span:first-of-type {
-      margin-right: 0;
-      margin-bottom: 1.5rem;
+    .cookie-policy h2 {
+        font-size: 2rem;
     }
-  }
 
-  .footer__top-icon {
-    margin: 0;
-  }
+    h2 {
+        font-size: 2rem;
+    }
+
+    /*-- 1.1.2. Size Guide Section --*/
+    .size-guide {
+        padding: 4rem 0.5rem;
+    }
+
+    /*-- 1.1.3. Quote Form Section --*/
+    .quote-form__inner {
+        display: block;
+    }
+
+    .left {
+        padding-right: 0;
+    }
+
+    /*-- 1.1.4. Footer --*/
+    .footer__top__left {
+        display: flex;
+        flex-direction: column;
+
+        & .footer__top-icon {
+            margin-bottom: 0.5rem;
+        }
+
+        & span {
+            margin-left: 0rem;
+        }
+
+        & span:first-of-type {
+            margin-right: 0;
+            margin-bottom: 1.5rem;
+        }
+    }
+
+    .footer__top-icon {
+        margin: 0;
+    }
 }
 
 // 1.2. Small devices (landscape phones, less than 768px)
 @media (max-width: 767px) {
-
-  /*-- 1.2.1. Services Section --*/
-  .services__inner {
-    @include flex-col-center;
-  }
-
-  /*-- 1.2.2. How It Works Section --*/
-  .how-works__inner {
-    @include flex-col-center;
-  }
-
-  .how-works {
-    margin: 4rem 0;
-    padding: 0;
-
-    & h2 {
-      margin: 0 2rem;
+    /*-- 1.2.1. Services Section --*/
+    .services__inner {
+        @include flex-col-center;
     }
-  }
 
-  /*-- 1.2.3. Info Section --*/
-  .info__inner {
-    flex-direction: column;
-    margin: 0;
-  }
-
-  /*-- 1.2.4. Why Us? Section --*/
-  .why-us__inner {
-    padding: 0;
-  }
-
-  .why-us__inner__lists {
-    display: block;
-    margin-top: 2rem;
-
-    & ul {
-      padding: 0;
+    .card {
+        -webkit-margin-after: 4rem;
     }
-  }
 
-  /*-- 1.2.5. Packing Section --*/
-  .packing__inner {
-    @include flex-col-center;
-  }
+    .card:last-of-type {
+        -webkit-margin-after: 0;
+    }
 
-  /*-- 1.2.6. Checklist --*/
-  .checklist-header {
-    font-size: 3rem;
-  }
+    /*-- 1.2.2. How It Works Section --*/
+    .how-works__inner {
+        @include flex-col-center;
+    }
 
-  .checklist__grid {
-    grid-template-columns: 1fr;
-  }
+    .how-works {
+        margin: 4rem 0;
+        padding: 0;
 
-  .checklist__grid__left {
-    margin-bottom: 2rem;
-  }
+        & h2 {
+            margin: 0 2rem;
+        }
+    }
 
-  .checklist__grid__right {
-    grid-column: 1 / 2;
-  }
+    .item {
+        -webkit-margin-after: 4rem;
+    }
+
+    .item:last-of-type {
+        -webkit-margin-after: 0;
+    }
+
+    /*-- 1.2.3. Info Section --*/
+    .info__inner {
+        flex-direction: column;
+        margin: 0;
+    }
+
+    /*-- 1.2.4. Why Us? Section --*/
+    .why-us__inner {
+        padding: 0;
+    }
+
+    .why-us__inner__lists {
+        display: block;
+        margin-top: 2rem;
+
+        & ul {
+            padding: 0;
+        }
+    }
+
+    /*-- 1.2.5. Packing Section --*/
+    .packing__inner {
+        @include flex-col-center;
+    }
+
+    /*-- 1.2.6. Checklist --*/
+    .checklist-header {
+        font-size: 3rem;
+    }
+
+    .checklist__grid {
+        grid-template-columns: 1fr;
+    }
+
+    .checklist__grid__left {
+        margin-bottom: 2rem;
+    }
+
+    .checklist__grid__right {
+        grid-column: 1 / 2;
+    }
 }
 
 // 1.3. Medium devices (tablets, less than 992px)
 @media (max-width: 991px) {
+    /*-- 1.3.1. Burger Button --*/
+    .burger-btn {
+        display: block;
+        z-index: 2;
+        position: absolute;
+        right: 32px;
+        top: 55px;
+        appearance: none;
 
-  /*-- 1.3.1. Burger Button --*/
-  .burger-btn {
-    display: block;
-    z-index: 2;
-    position: absolute;
-    right: 32px;
-    top: 55px;
-    appearance: none;
+        &:checked + .burger-label .top {
+            transform: rotate(-45deg);
+            margin-top: 15px;
+        }
 
-    &:checked + .burger-label .top {
-      transform: rotate(-45deg);
-      margin-top: 15px;
+        &:checked + .burger-label .middle {
+            transform: rotate(45deg);
+            margin-top: -8px;
+        }
+
+        &:checked + .burger-label .bottom {
+            opacity: 0;
+        }
+
+        &:checked + .burger-label + .navbar__bottom__nav {
+            transform: translateY(100vh);
+        }
     }
 
-    &:checked + .burger-label .middle {
-      transform: rotate(45deg);
-      margin-top: -8px;
+    .burger-label {
+        background-color: transparent;
+        cursor: pointer;
+        z-index: 2;
+        position: absolute;
+        right: 35px;
     }
 
-    &:checked + .burger-label .bottom {
-      opacity: 0;
+    .bar {
+        display: block;
+        width: 30px;
+        height: 3px;
+        margin: 5px 0;
+        background-color: $white;
+        transition: all 0.1s ease-in-out;
     }
 
-    &:checked + .burger-label + .navbar__bottom__nav {
-      transform: translateY(100vh);
+    /*-- 1.3.2. Navigation --*/
+    .navbar__bottom__nav {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        background: $color4-opac;
+        height: 100vh;
+        width: 100vw;
+        top: -100vh;
+        left: 0px;
+        z-index: 1;
+        transition: all 0.4s ease-in-out;
     }
-  }
 
-  .burger-label {
-    background-color: transparent;
-    cursor: pointer;
-    z-index: 2;
-    position: absolute;
-    right: 35px;
-  }
-
-  .bar {
-    display: block;
-    width: 30px;
-    height: 3px;
-    margin: 5px 0;
-    background-color: $white;
-    transition: all 0.1s ease-in-out;
-  }
-
-  /*-- 1.3.2. Navigation --*/
-  .navbar__bottom__nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    background: $color4-opac;
-    height: 100vh;
-    width: 100vw;
-    top: -100vh;
-    left: 0px;
-    z-index: 1;
-    transition: all 0.4s ease-in-out;
-  }
-
-  .nav-item {
-    margin: 1.5rem 0;
-  }
-
-  .nav__btn {
-    margin-left: 0;
-  }
-
-  /*-- 1.3.3. Info Section --*/
-  .info__inner__img {
-    grid-column: 1 / 3;
-  }
-
-  .info__inner__text {
-    grid-column: 1 / 3;
-    margin: 2rem 0 0 0;
-  }
-
-  /*-- 1.3.4. Storage Section --*/
-  .storage__inner {
-    grid-template-columns: 1fr;
-  }
-
-  .storage__inner__info {
-    grid-column: 1 / 2;
-    margin: 0 0 2rem 0;
-
-    & h1 {
-      font-size: 2.5rem;
+    .nav-item {
+        margin: 1.5rem 0;
     }
-  }
 
-  .storage__inner__img {
-    grid-column: 1 / 2;
-    justify-self: center;
-  }
+    .nav__btn {
+        margin-left: 0;
+    }
 
-  /*-- 1.3.5. About Section --*/
-  .about__info {
-    grid-column: 1 / 3;
-    margin: 0 0 2rem 0;
-  }
+    /*-- 1.3.3. Info Section --*/
+    .info__inner__img {
+        grid-column: 1 / 3;
+    }
 
-  .about__img {
-    grid-column: 1 / 3;
-  }
+    .info__inner__text {
+        grid-column: 1 / 3;
+        margin: 2rem 0 0 0;
+    }
 
-  .about__list {
-    grid-column: 1 / 3;
-  }
+    /*-- 1.3.4. Storage Section --*/
+    .storage__inner {
+        grid-template-columns: 1fr;
+    }
 
-  /*-- 1.3.6. Flexible Section --*/
-  .flexible__inner__img {
-    grid-column: 1 / 3;
-  }
+    .storage__inner__info {
+        grid-column: 1 / 2;
+        margin: 0 0 2rem 0;
 
-  .flexible__inner__info {
-    grid-column: 1 / 3;
-    margin: 1rem 0 0 0;
-  }
+        & h1 {
+            font-size: 2.5rem;
+        }
+    }
 
-  /*-- 1.3.7. Contact Section --*/
-  .contact__inner-form {
-    grid-column: 1 / 4;
-  }
+    .storage__inner__img {
+        grid-column: 1 / 2;
+        justify-self: center;
+    }
 
-  .contact__inner-info {
-    grid-column: 1 / 4;
-    padding: 1rem;
-    font-size: 0.9rem;
-  }
+    /*-- 1.3.5. About Section --*/
+    .about__info {
+        grid-column: 1 / 3;
+        margin: 0 0 2rem 0;
+    }
 
-  /*-- 1.3.8. Footer --*/
-  .footer__top {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+    .about__img {
+        grid-column: 1 / 3;
+    }
 
-  .footer__top__left {
-    margin-bottom: 1.5rem;
-  }
+    .about__list {
+        grid-column: 1 / 3;
+    }
 
-  .footer__middle__links {
-    margin: 1rem 0;
-    text-align: center;
-  }
+    /*-- 1.3.6. Flexible Section --*/
+    .flexible__inner__img {
+        grid-column: 1 / 3;
+    }
+
+    .flexible__inner__info {
+        grid-column: 1 / 3;
+        margin: 1rem 0 0 0;
+    }
+
+    /*-- 1.3.7. Contact Section --*/
+    .contact__inner-form {
+        grid-column: 1 / 4;
+    }
+
+    .contact__inner-info {
+        grid-column: 1 / 4;
+        padding: 1rem;
+        font-size: 0.9rem;
+    }
+
+    /*-- 1.3.8. Footer --*/
+    .footer__top {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer__top__left {
+        margin-bottom: 1.5rem;
+    }
+
+    .footer__middle__links {
+        margin: 1rem 0;
+        text-align: center;
+    }
 }
 
 // 1.4. Large devices (desktops, less than 1200px)
 @media (max-width: 1199px) {
+    /*-- 1.4.1. Services Section --*/
+    .services__inner {
+        grid-template-columns: repeat(2, 1fr);
+    }
 
-  /*-- 1.4.1. Services Section --*/
-  .services__inner {
-    grid-template-columns: repeat(2, 1fr);
-  }
+    /*-- 1.4.2. How It Works? Section --*/
+    .how-works__inner {
+        grid-template-columns: repeat(2, 1fr);
+    }
 
-  /*-- 1.4.2. How It Works? Section --*/
-  .how-works__inner {
-    grid-template-columns: repeat(2, 1fr);
-  }
+    /*-- 1.4.3. Packing Section --*/
+    .packing__inner {
+        grid-template-columns: repeat(2, 1fr);
+        justify-items: center;
+        grid-gap: 40px;
+    }
 
-  /*-- 1.4.3. Packing Section --*/
-  .packing__inner {
-    grid-template-columns: repeat(2, 1fr);
-    justify-items: center;
-    grid-gap: 40px;
-  }
+    /*-- 1.4.4. Quote Section --*/
+    .quote-container {
+        display: flex;
+        flex-direction: column;
+    }
 
-  /*-- 1.4.4. Quote Section --*/
-  .quote-container {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .quote-info {
-    text-align: left;
-  }
+    .quote-info {
+        text-align: left;
+    }
 }
-
 
 /*--------------------2. More Than Media Queries----*/
 
 // 2.1. Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-
-  /*-- 2.1.1. Headings --*/
-  .hero h1 {
-    font-size: 10vw;
-  }
+    /*-- 2.1.1. Headings --*/
+    .hero h1 {
+        font-size: 10vw;
+    }
 }
 
 // 2.2. Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-
-  /*-- 2.2.1. Headings --*/
-  .hero h1 {
-    font-size: 8vw;
-  }
+    /*-- 2.2.1. Headings --*/
+    .hero h1 {
+        font-size: 8vw;
+    }
 }
 
 // 2.3. Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-
-  /*-- 2.3.1. Headings --*/
-  .hero h1 {
-    font-size: 6vw;
-  }
+    /*-- 2.3.1. Headings --*/
+    .hero h1 {
+        font-size: 6vw;
+    }
 }
-
 
 /*--------------------3. Print Media Query----*/
 @media print {
-  nav,
-  header,
-  footer {
-    display: none !important;
-  }
+    nav,
+    header,
+    footer {
+        display: none !important;
+    }
 }
