--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -947,6 +947,15 @@
           align-items: center;
 }
 
+.footer__top__left a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .footer__top__left span {
   margin-left: 0.5rem;
 }
