--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -751,6 +751,11 @@
     display: flex;
     align-items: center;
 
+    & a {
+        display: flex;
+        align-items: center;
+    }
+
     & span {
         margin-left: 0.5rem;
     }
