--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -829,7 +829,7 @@
   margin: 1rem;
 }
 
-.contact__inner-info ul li {
+.contact__inner-info a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
